--- a/02 - Hello world with modules,controller/index.html
+++ b/02 - Hello world with modules,controller/index.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello world</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <title>Hello world</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.23/angular.min.js"></script>
     <script src="app.js"></script>
 </head>
 
 <body ng-app="myApp">
-<div ng-controller="myCtrl">
-	<input class="form-control" ng-model="name" placeholder="Enter name!!!">
- 	Hello {{name}}	
+<div class="container">
+
+    <div>
+        <h3 class="text-center">AngularJS step by step</h3>
+    </div>
+    <hr/>
+    <div class="col-md-6" ng-controller="myCtrl">
+        <input class="form-control" ng-model="greeting" placeholder="Enter greeting!!!">
+        Hello {{greeting}}
+    </div>
+    <div class="col-md-6">
+        <pre>
+            Đầu tiên tạo 1 modules tên "myApp" (modules có 2 tham số,tham số thứ nhất tên modules,tham số thứ 2 là mảng các module,bạn có thể để mảng rỗng nếu như không có modules nào được truyền vào).Sau đó chúng ta sẽ tạo 1 controller với tên là myCtrl (ban đầu chúng ta định ngĩa 1 Scope là greeting = "world để hiển thị").Quay lại template thẻ body khai báo ng-app="myApp" và khai báo controller được sử dụng : ng-controller="myCtrl"
+        </pre>
+    </div>
 </div>
- 
 </body>
 </html>
