--- a/01 - Hello world/index.html
+++ b/01 - Hello world/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Hello world</title>
+    <meta charset="utf-8"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.23/angular.min.js"></script>
 </head>
