--- a/03 - Hello world and scopes inheritance with $parent/index.html
+++ b/03 - Hello world and scopes inheritance with $parent/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Hello world</title>
+    <title>Angular step by step</title>
     <meta charset="utf-8"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.23/angular.min.js"></script>
@@ -24,7 +24,7 @@
     </div>
     <div class="col-md-6">
         <pre>
-Mặc định trong angular khi controller định ngĩa ra thì model của controller đó không tồn tại thì nó sẽ tìm kiếm ở mức level cao hơn,cho đến khi tìm thấy,khi không tìm thấy mặc định sẽ không hiển thị model
+Mặc định trong angular khi controller định nghĩa ra thì model của controller đó không tồn tại thì nó sẽ tìm kiếm ở mức level cao hơn,cho đến khi tìm thấy,khi không tìm thấy mặc định sẽ không hiển thị model
         </pre>
     </div>
 </div>
